// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput render it should render 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with disabled 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #e4e7e9;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: not-allowed;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #e4e7e9;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="not-allowed"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      disabled={true}
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with hasError 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #e22525;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #921200;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      aria-invalid={true}
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with prefix 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-1::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  padding: 0.5rem;
  border-right-width: 1px;
  border-right-color: rgb(228,231,233);
  border-right-style: solid;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    cursor="text"
    display="flex"
    width="100%"
  >
    <div
      className="emotion-0"
      display="flex"
    >
      <div>
        prefix
      </div>
    </div>
    <input
      className="emotion-1 emotion-2"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with readOnly 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #888c8e;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      aria-readonly={true}
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      readOnly={true}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with suffix 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: rgb(40,42,43);
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(102,106,109);
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: rgb(102,106,109);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  padding: 0.5rem;
  border-left-width: 1px;
  border-left-color: rgb(228,231,233);
  border-left-style: solid;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
    <div
      className="emotion-2"
      display="flex"
    >
      <div>
        suffix
      </div>
    </div>
  </div>
</div>
`;
